# brain_explore

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLAUDE.md.backup.20251202_183113  CLEANUP_SUMMARY.md  GEMINI.md  IES AST SiYuan structure.md  Master list.md  README.md  SPRINT-3-IMPLEMENTATION-SUMMARY.md  SPRINT-3-QUICK-REFERENCE.md  TASK.md  Therapy approach development 2.md  backlog.md  backupAGENTS.md  docker-compose.yml  mcp.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
ies/backend/: .coverage  QUESTION_ENGINE_API.md  README.md  pyproject.toml
ies/backend/scripts/: backfill_evidence.py  evidence_extraction_design.md  seed_facets.py
ies/backend/src/ies_backend/: __init__.py  config.py  main.py
ies/backend/tests/: __init__.py  conftest.py  test_block_attribute_service.py  test_book_entities.py  test_books_api.py  test_calibre_service.py  test_capture_queue.py  test_chat_service.py  test_context_crud_service.py  test_context_note_parser.py  test_conversations.py  test_enrichment_service.py  test_extraction_engine.py  test_extraction_schema.py  test_facets.py  test_feedback_service.py  test_graph_service.py  test_highlight_sync_service.py  test_inbox.py  test_journey_pattern_service.py  test_journey_service.py  test_journey_timeline.py  test_passage_ranking.py  test_personal_graph_service.py  test_plan_builder.py  test_profile.py  test_question_engine.py  test_reframe_service.py  test_session_context.py  test_session_state_service.py  test_session_store.py  test_sources.py  test_sync_service.py  test_template_service.py  test_thinking_and_flow.py  test_visit_tracking_service.py
ies/backend/tests/services/: test_question_service.py
(+1092 files in other folders)
