[project]
name = "brain-explore-library"
version = "0.1.0"
description = "Knowledge processing system for therapy framework library"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.7.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "ebooklib>=0.18",
    "pymupdf>=1.23.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["library"]
